--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --White: #F2F8F8;
+  --Black:  #232320;
+  --Gray-dark: #56535f;
+  --Bone: #fefaf6;
+  --spacing: 8px;
+  --spacing-2: 16px;
+  --spacing-3: 24px;
+  --spacing-4: 32px;
+  --spacing-5: 40px;
+  --spacing-6: 48px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Biotif';
+  src: local('Biotif'), url(./fonts/Biotif-Regular.ttf) format('opentype');
 }
+
+body {
+  margin: 0;
+  font-family: Biotif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: var(--Gray-dark);
+  background-color: var(--Bone);
+}
+
+
+
