--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,37 +1,24 @@
-.Nav-container {
+.Nav-content {
   display: flex;
   justify-content: space-between;
-  padding: 24px 48px;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  padding-left: var(--spacing-6);
+  padding-right: var(--spacing-6);
+  padding-top: var(--spacing-3);
+  padding-bottom: var(--spacing-2);
+  background-color: var(--Bone);
 }
 
-.Nav-container a {
+.Nav-content a {
   text-decoration: none;
   color: var(--Black);
   font-weight: 600;
   font-size: 1.2rem;
 }
 
-.Nav-container nav {
+.Nav-content nav {
   display: flex;
   gap: 52px;
-}
-
-.Nav-image-holder {
-  width: 50px;
-  height: 50px;
-  border: solid 1.5px;
-  border-radius: 10px;
-  background-color: green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgb(242, 248, 248);
-  font-weight: 600;
-}
-
-.resume {
-  border: solid 1px;
-  padding: 8px;
-  border-radius: 8px;
 }
