--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,10 @@
   --spacing-4: 32px;
   --spacing-5: 40px;
   --spacing-6: 48px;
+  --spacing-7: 56px;
+  --spacing-8: 64px;
+  --spacing-9: 72px;
+  --spacing-10: 80px;
 }
 
 @font-face {
