--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -21,3 +21,11 @@
   padding-top: var(--spacing-2);
   padding-left: var(--spacing-3);
 }
+
+.align-right {
+  text-align: right;
+}
+
+.About-bottom {
+  display: flex;
+}
