feat: improve style and content of Contact section, add author

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -38,3 +38,7 @@ button.Resume {
   background-color: transparent;
   cursor: pointer;
 }
+.HomeIcon-image-container img{
+  width: 26px;
+  height: 26px;
+}
