--- a/client/src/components/Contact/Contact.css
+++ b/client/src/components/Contact/Contact.css
@@ -2,11 +2,28 @@
   padding-top: var(--spacing-3);
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 900px;
+}
+
+.Contact-content a {
+  text-decoration: none;
+  color: var(--Gray-dark);
 }
 
 .NinaBiking-container {
   display: flex;
   justify-content: center;
 }
+
+.Contact-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.author p {
+  text-align: right;
+  
+}
+
 
