--- a/client/src/components/Contact/Contact.css
+++ b/client/src/components/Contact/Contact.css
@@ -12,7 +12,9 @@
 
 .NinaBiking-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  flex: 1;
+  padding-right: var(--spacing-8);
 }
 
 .Contact-bottom {
@@ -23,6 +25,7 @@
 
 .author p {
   text-align: right;
+  font-size: 1.1rem;
   
 }
 
