--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@
   --Gray-dark: #3c3a42;
   --Bone: #fefaf6;
   --Cotton-candy: #ffc4ff;
+  --Djon: #b4b219;
   --spacing: 8px;
   --spacing-2: 16px;
   --spacing-3: 24px;
