--- a/client/src/components/Contact/Contact.css
+++ b/client/src/components/Contact/Contact.css
@@ -1,8 +1,13 @@
+/* .Contact-container {
+  padding-top: 135px;
+} */
+
 .Contact-content {
   padding-top: var(--spacing-3);
   display: flex;
   flex-direction: column;
   width: 900px;
+
 }
 
 .Contact-content a {
@@ -26,7 +31,6 @@
 .author p {
   text-align: right;
   font-size: 1.1rem;
-  
 }
 
 
