--- a/client/src/components/Contact/Contact.css
+++ b/client/src/components/Contact/Contact.css
@@ -1,13 +1,8 @@
-/* .Contact-container {
-  padding-top: 135px;
-} */
-
 .Contact-content {
   padding-top: var(--spacing-3);
   display: flex;
   flex-direction: column;
-  width: 900px;
-
+  width: 100%;
 }
 
 .Contact-content a {
@@ -22,6 +17,10 @@
   padding-right: var(--spacing-8);
 }
 
+.NinaBiking-content {
+  max-width: 100%;
+}
+
 .Contact-bottom {
   display: flex;
   justify-content: space-between;
@@ -33,4 +32,31 @@
   font-size: 1.1rem;
 }
 
+@media screen and (min-width: 750px) {
+  .Contact-content {
+    width: 900px;
+  }
+
+}
+
+@media screen and (max-width: 750px) {
+
+  .Contact-container {
+    width: 100%;
+  }
+
+  .Contact-bottom {
+    flex-direction: column;
+  }
+
+  .NinaBiking-container {
+    padding-right: 0;
+    padding-bottom: var(--spacing-3);
+  }
+
+  .author p {
+    text-align: center;
+    font-size: 1.1rem !important;
+  }
+}
 
