--- a/client/src/components/Experience/Experience.css
+++ b/client/src/components/Experience/Experience.css
@@ -23,10 +23,6 @@
   padding-top: var(--spacing-3);
   padding-bottom: var(--spacing-3);
   width: 100%;
-
-  max-height: 460px;
-  min-height: 460px;
-  height: 100%;
 }
 
 .Experience-details h3 {
@@ -51,7 +47,7 @@
 
 .visible {
   display: block;
-  /* animation: fadeIn 300ms ease-in-out both; */
+  animation: fadeIn 300ms ease-in-out both;
 }
 
 .tasks ul {
@@ -63,7 +59,7 @@
 }
 
 .tasks p {
-  line-height: var(--spacing-4);
+  line-height: var(--spacing-5);
   font-size: 1.2rem;
 }
 
@@ -131,4 +127,41 @@ p.year {
 .Experience-list li.selected:nth-child(even):before {
   opacity: 1;
   transform: translateZ(0) scale3d(1.1,1.1,1.1)  rotate(-1deg);
+}
+
+@media screen and (min-width: 750px) {
+  .Experience-details {
+    height: 100%;
+  }
+  
+}
+
+@media screen and (max-width: 750px) {
+  .Experience-content {
+    flex-direction: column;
+  }
+
+  .Experience-list ul {
+    flex-direction: row;
+    gap: var(--spacing-3);
+    padding-bottom: var(--spacing);
+  }
+
+  .Experience-list li {
+    line-height: var(--spacing-3);
+  }
+
+  .Experience-title {
+    flex-direction: column;
+    line-height: var(--spacing-4);
+  }
+
+  .Experience-details {
+    padding-top: 0;
+  }
+
+  .Experience-details li {
+    line-height: var(--spacing-4);
+  }
+
 }
