--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -9,6 +9,7 @@
   padding-top: var(--spacing-3);
   padding-bottom: var(--spacing-2);
   background-color: var(--Bone);
+  z-index: 100;
 }
 
 .Nav-content a {
@@ -38,7 +39,34 @@ button.Resume {
   background-color: transparent;
   cursor: pointer;
 }
+
 .HomeIcon-image-container img{
   width: 26px;
   height: 26px;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 750px) {
+  .Nav-content {
+    top: 0;
+    flex-direction: column;
+    gap: var(--spacing-2);
+    padding-top: var(--spacing-3);
+  }
+
+  .Nav-content a {
+    font-size: 1.1rem;
+  }
+
+  .Nav-content nav {
+    display: flex;
+    justify-content: center;
+    gap: var(--spacing-3);
+    flex-wrap: wrap;
+  }
+
+  .Nav-icons {
+    gap: var(--spacing-5)
+  }
+
 }
