--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -11,7 +11,6 @@
 .Project-section {
   display: flex;
   gap: var(--spacing-4);
-  width: 850px;
 }
 
 .Project-image img {
@@ -20,32 +19,42 @@
 }
 
 img.JobSeekerHome {
-  width: 300px;
-  height: 435px;
+  max-width: 300px;
 }
 
 img.dogGoHome {
-  width: 330px;
-  height: 440px;
+  max-width: 300px;
 }
 
 img.NinasCookbook {
-  width: 580px;
-  height: 350px;
+  max-width: 580px;
 }
 
 .Project-section-ninas {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-2);
-  width: 850px;
 }
 
 .Project-image-ninas {
   align-self: center;
+
 }
 
 .Project-image-ninas img {
   border-radius: var(--spacing);
   box-shadow: 2px 6px 4px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 750px){
+  .Project-section {
+    flex-direction: column;
+  }
+
+  .Projects-container {
+    width: 100%;
+  }
 }
