feat: fixing scrolling issue on mobile

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-3);
+  align-self: center;
 }
 
 .NinaReading-container {
@@ -45,7 +46,7 @@
 
   .Home-Text-container {
     padding: var(--spacing-10);
-    padding-top: 230px;
+    /* padding-top: 230px; */
   }
 
 }
@@ -68,7 +69,7 @@
   }
 
   .Home-Text-container{
-    padding-top: 150px;
+    padding-top: 130px;
   }
 
   .Home-Text-container h1{
