feat: update resume file

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 :root {
   --White: #F2F8F8;
   --Black: #232320;
-  --Gray-light: #7c778b;
-  --Gray: #56535f;
-  --Gray-dark: #3c3a42;
-  --Bone: #fefaf6;
-  --Cotton-candy: #ffc4ff;
-  --Djon: #b4b219;
+  --Gray-light: #7C778B;
+  --Gray: #56535F;
+  --Gray-dark: #3C3A42;
+  --Bone: #FEFAF6;
+  --Cotton-candy: #FFC4FF;
+  --Djon: #B4B219;
   --spacing: 8px;
   --spacing-2: 16px;
   --spacing-3: 24px;
